[project]
name = "tile-lens-experiments"
version = "0.1.0"
description = "Experiment Scripts for TileLens"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llnl-hatchet",
    "numpy",
    "pandas",
    "torch == 2.9.1",
    "triton-viz",
    "seaborn",
    "tokenizers==0.21.1",
    "transformers==4.51.3",
    "brokenaxes",
#    "liger_kernel",
]

[tool.uv.sources]
triton-viz = { path = "./submodules/triton-viz" }
liger_kernel = { path = "./submodules/Liger-Kernel" }
